--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
-  }
+  },
+  "main": "index.js",
+  "author": "Manish Sahu <manissh7352@gmail.com>",
+  "license": "MIT"
 }
